# HP-82240B-IRemu

./: .gitignore  CMakeLists.txt  circuit.cddx
driver/unidrv-win32/: hp82240b.gpd  hp82240b.inf
include/: btstack_config.h  config.h.in  printbuffer.h  redeye.h  redeye_commands.h  redeye_state.h  tusb_config.h  usb_descriptors.h  usb_driver.h  usb_interchange.h  utf8transcoder.h
pio/: ircomm.pio  redeye.pio
src/: bluetooth.c  printbuffer.c  printer.c  printer_tester.c  redeye.c  test_printer.c  testprint.c  usb_descriptors.c  usb_driver.c  utf8transcoder.c
tests/: CMakeLists.txt  bytesplit.c  ecc.c  frame.c  pngle.c  ringbuffer.c  utf8transcode.c
